# CLRS

./: .gitignore  CMakeLists.txt  README.md  add_section.sh  project_setup.sh  test_names.txt
include/bignum/: big_int.h  operations.h
include/chapter10/: list.h  xor_list.h
include/chapter12/: binary_tree.h  tree.h
include/chapter13/: rb_tree.h
include/chapter2/: insertion_sort.h  searching.h  sorting.h
include/chapter31/: number_theoretic.h
include/chapter5/: random.h
include/chapter6/: heap_based_structs.h  heaps.h
include/chapter7/: partitions.h  quick_sort.h
include/chapter8/: linear_sorting.h
include/chapter9/: order_statistics.h
src/: CMakeLists.txt
src/bignum/: CMakeLists.txt  big_int.cc
src/chapter10/: CMakeLists.txt
src/chapter11/: CMakeLists.txt
src/chapter12/: CMakeLists.txt
src/chapter13/: CMakeLists.txt
src/chapter2/: CMakeLists.txt  insertion_sort.cc  searching.cc  sorting.cc
src/chapter31/: CMakeLists.txt
src/chapter5/: CMakeLists.txt  random.cc
src/chapter6/: CMakeLists.txt  heap_based_structs.cc  heaps.cc
src/chapter7/: CMakeLists.txt
src/chapter8/: CMakeLists.txt  linear_sorting.cc
src/chapter9/: CMakeLists.txt  order_statistics.cc
tests/: CMakeLists.txt
tests/bignum/: CMakeLists.txt  test_big_int.cc
tests/chapter10/: CMakeLists.txt  test_list.cc
tests/chapter11/: CMakeLists.txt
tests/chapter12/: CMakeLists.txt  test_binary_tree.cc  test_tree.cc
tests/chapter13/: CMakeLists.txt  test_rb_tree.cc
tests/chapter2/: CMakeLists.txt  test_insertion_sort.cc  test_searching.cc  test_sorting.cc
tests/chapter31/: CMakeLists.txt  test_number_theoretic.cc
tests/chapter5/: CMakeLists.txt  test_random.cc
tests/chapter6/: CMakeLists.txt  test_heap_based_structs.cc  test_heaps.cc
tests/chapter7/: CMakeLists.txt  test_partitions.cc  test_quick_sort.cc  test_three.cc
tests/chapter8/: CMakeLists.txt  test_linear_sorting.cc
tests/chapter9/: CMakeLists.txt  test_order_statistics.cc
tests/common/: CMakeLists.txt  container_fixture.h  random_generators.cc  random_generators.h  sequence_fixture.h  sorting_fixture.h  testing_helpers.cc  testing_helpers.h  tree_fixture.h
tests/common/fixtures/: CMakeLists.txt  sequence_fixture.h  tree_fixture.h
tests/common/helpers/: CMakeLists.txt  printing_helpers.cc  printing_helpers.h  random_generators.cc  random_generators.h  speed_profiler.cc  speed_profiler.h
